[package]
name = "debra"
description = "distributed epoch-based reclamation"
version = "0.1.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/debra"
edition = "2018"
build = "build.rs"
exclude = [".travis.yml", "ci/*"]

[features]
default = ["std"]

# retiring of records counts towards flush threshold
count-retire = []

# disable for use in no_std crates (for limitations see README.md)
std = ["debra-common/std"]

[dependencies]
cfg-if = "0.1.9"

[dependencies.debra-common]
version = "0.1.1"
default-features = false
