[package]
name = "debra"
description = "distributed epoch-based reclamation"
version = "0.0.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/debra"
documentation = "https://docs.rs/debra"
keywords = ["epoch", "reclamation", "concurrent", "lock-free"]
edition = "2018"
exclude = [".travis.yml", "ci/*"]
